--- a/nvme_aix_61.adoc
+++ b/nvme_aix_61.adoc
@@ -1,7 +1,7 @@
 ---
 sidebar: sidebar
 permalink: nvme_aix_61.html
-keywords: nvme, linux, rhel, red hat, enterprise, aix 
+keywords: nvme, linux, rhel, red hat, enterprise, aix, ontap
 summary: How to Configure NVMe/FC Host for AIX with ONTAP
 ---
 
