--- a/nvme_aix.adoc
+++ b/nvme_aix.adoc
@@ -19,17 +19,14 @@ You can enable NVMe/FC on IBM AIX and VIOS/PowerVM hosts using ONTAP storage as 
 
 The following support is available for NVMe/FC host configuration for an AIX host with ONTAP:
 
-* Beginning with ONTAP 9.13.1, NVMe over Fibre Channel (NVMe/FC) support is added for IBM AIX 7.2 TL5 SP6, AIX 7.3 TL1 SP2 and VIOS 3.1.4.2 releases with SAN boot support. 
+* Beginning with ONTAP 9.13.1, NVMe over Fibre Channel (NVMe/FC) support is added for IBM AIX 7.2 TL5 SP6, AIX 7.3 TL1 SP2 and VIOS 3.1.4.2 releases with SAN boot support for both physical and virtual stacks. See the IBM documentation for more information on setting up SAN boot support.
 
 * NVMe/FC is supported only with Power9 and Power10 IBM servers.
 
-* No separate PCM (Path Control Module, such as HUK for AIX SCSI MPIO support) is required for the NVMe devices.
+* No separate PCM (Path Control Module), such as HUK for AIX SCSI MPIO support, is required for the NVMe devices.
 
-* Virtualization support with NetApp (VIOS/PowerVM) is introduced with VIOS 3.1.4.21. This is supported through NPIV storage virtualization mode only using the Power10 IBM server.
+* Virtualization support with NetApp (VIOS/PowerVM) is introduced with VIOS 3.1.4.21. This is supported through NPIV (N_PortID Virtualization) storage virtualization mode only using the Power10 IBM server.
 
-* You can run NVMe and SCSI traffic on the same co-existent host. This is a commonly deployed host configuration.
-
-* SAN booting is supported with both Physical and Virtual stacks. See the IBM documentation to know the prerequisites and set up SAN boot.
 
 .What you'll need
 
@@ -37,39 +34,41 @@ The following support is available for NVMe/FC host configuration for an AIX hos
 
 * Set the ANATT (Asymmetric Namespace Access Transition Timeout) to 60 seconds or above to ensure that all the ONTAP workflows are nondisruptive. By default, the ANATT for the AIX host OS is 30 second.
 
-* If you have a MetroCluster configuration, NetApp recommends changing AIX NVMe/FC default APD (All Path Down) time for supporting MetroCluster Unplanned Switchover events to avoid the AIX operating system enforcing a shorter I/O timeout. For additional information and the recommended changes to default settings, refer [Public Report 1553249] and NetApp <KB>
+* If you have a MetroCluster configuration, NetApp recommends changing AIX NVMe/FC default APD (All Path Down) time for supporting MetroCluster Unplanned Switchover events to avoid the AIX operating system enforcing a shorter I/O timeout. For additional information and the recommended changes to default settings, refer to link:[Public Report 1553249].
 
-* IBM provides an Interim Fix (ifix) which caps the ANATT values at 60 seconds. For NVMe/FC AIX support, you must download and install the ifix from the IBM website on the GA versions of AIX OS. This is not required for the VIOS/PowerVM OS.
+* IBM provides an Interim Fix (iFix) which caps the ANATT values at 60 seconds. For NVMe/FC AIX support, you must download and install the ifix from the IBM website on the GA versions of AIX OS. This is not required for the VIOS/PowerVM OS.
 
-The ifix details are as follows:
++
 
-* For AIX level 72-TL5-SP6-2320, install the `IJ46710s6a.230509.epkg.Z` package.
-* For AIX level 73-TL1-SP2-2320, install the `IJ46711s2a.230509.epkg.Z` package.
+The iFix details are as follows:
++
 
-For more information on managing ifixes, see link:http://www-01.ibm.com/support/docview.wss?uid=isg3T1012104[Managing Interim Fixes (ifix)].
-
+** For AIX level 72-TL5-SP6-2320, install the `IJ46710s6a.230509.epkg.Z` package.
+** For AIX level 73-TL1-SP2-2320, install the `IJ46711s2a.230509.epkg.Z` package.
++
+For more information on managing iFixes, see link:http://www-01.ibm.com/support/docview.wss?uid=isg3T1012104[Managing Interim Fixes (ifix)].
++
 [NOTE] 
-You need to install the ifixes on an AIX version with no previously installed ifixes related to `devices.pciex.pciexclass.010802.rte` on the system. If these ifixes are present, they will conflict with the new installation.
-
-For non-virtualized mode (HBA assigned to the AIX LPAR or the physical/native stack)
-
+You need to install the iFixes on an AIX version with no previously installed iFixes related to `devices.pciex.pciexclass.010802.rte` on the system. If these iFixes are present, they will conflict with the new installation.
++
+The following table demonstrates HBA assigned to the AIX LPAR (AIX Logical Partition) or the physical/native stack in a non-virtualized mode:
++
 [cols="10,30,30,10,10",options="header"]
 |===
 
-|Host OS	|Power Arch	|Power FW version	|Mode	|Comments
-|AIX 7.2 TL5 SP6	|Power9 	
-|FW 950 or later	|Physical Stack	|iFix available via TS012877410
-	|Power10	|FW 1010 or later	Physical Stack	|Sanboot is supported. iFix available via TS012877410
-|AIX 7.3 TL1 SP2	|Power9	|FW 950 or later	|Physical Stack	|iFix available via TS012877410
-	Power10	|FW 1010 or later	|Physical and Virtual Stack	 |iFix available via TS012877410
+|Host OS |Power Arch |Power FW version |Mode |Comments
+.2+|AIX 7.2 TL5 SP6 |Power9  |FW 950 or later	|Physical stack	|iFix available through TS012877410.
+|Power10 |FW 1010 or later	|Physical stack	|SAN booting is supported. iFix available through TS012877410.
+.2+|AIX 7.3 TL1 SP2 |Power9	|FW 950 or later	|Physical stack	|iFix available through TS012877410.
+	|Power10	|FW 1010 or later	|Physical and virtual stack	 |iFix available through TS012877410.
 |===
-
-For virtualized mode (HBA assigned to the VIOS) with NPIV only support:
-
++
+The following table demonstrates HBA assigned to the VIOS with NPIV-enabled support in a virtualized mode:
++
 [cols="10,30,30,10,10",options="header"]
 |===
 |Host OS	|Power Arch	|Power FW version	|Mode	|Comments
-|VIOS/PowerVM 3.1.4.21	|Power10	|FW 1010 or later	|Virtual Stack	|Support starts from AIX 7.3 TL1 SP2 for VIOC 
+|VIOS/PowerVM 3.1.4.21	|Power10	|FW 1010 or later	|Virtual stack	|Support starts from AIX 7.3 TL1 SP2 for VIOCc 
 |===
 
 == Known limitations
@@ -79,11 +78,11 @@ NVMe/FC host configuration for AIX with ONTAP has the following known limitation
 * Qlogic/Marvel 32G FC HBAs on an AIX host does not support NVMe/FC.
 * SAN boot is not supported for NVMe/FC devices using Power9 IBM server.
 
-== Verify NVMe host multipath
+== Multipathing
 
-IBM MPIO is used for NVMe multipathing, which is provided by default when you install the OS. IBM `lsmpio` is a software tool used to improve the reliability and availability of storage in IBM AIX environments. It enables multiple paths to a storage device and provides load balancing across these paths. The tool monitors the health and availability of paths and automatically routes I/O requests to the available paths. It also supports dynamic configuration changes and failover mechanisms to prevent data loss in case of path failure. IBM `lsmpio` is commonly used in high-performance computing and mission-critical applications to ensure optimal storage performance and availability.
+IBM MPIO (Multi Path I/O), used for NVMe multipathing, is provided by default when you install the OS .  
 
-Verify NVME multipathing by using the `lsmpio` command (Load Source Multi-Pathing for IBM AIX):
+You can verify that NVMe multipathing is enabled for an AIX host by using the `lsmpio` command:
 
 ----
 #[root@aix_server /]: lsmpio -l hdisk1
@@ -105,7 +104,7 @@ You can use the following procedure to configure NVMe/FC for Broadcom/Emulex ada
 
 . Verify that you are using the supported adapter. For the most current list of supported adapters see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
 
-. By default, the NVMeoF protocol support is enabled in the physical FC; however, the NVMeoF protocol support is disabled in the Virtual Fibre Channel (VFC) on Virtual I/O Server (VIOS). Retrieve a list of the adapters where the NVME-OF support is disabled:
+. By default, the NVMe/FC protocol support is enabled in the physical FC; however, the NVMe/FC protocol support is disabled in the Virtual Fibre Channel (VFC) on Virtual I/O Server (VIOS). Retrieve a list of the adapters where the NVMe/FC support is disabled:
 +
 ----
 $ lsmap -all -npiv
@@ -222,6 +221,7 @@ attach     switch                                                               
 autoconfig available                                                            Configuration State            True
 host_nqn   nqn.2014-08.org.nvmexpress:uuid:64e039bd-27d2-421c-858d-8a378dec31e8 Host NQN (NVMe Qualified Name) True
 ----
+
 .. View the partition UUID:
 +
 ----
@@ -252,7 +252,7 @@ vs_s922-55-lpar2 subsystem_s922-55-lpar2 nqn.2014-08.org.nvmexpress:uuid:64e039b
 
 == Validate NVMe/FC
 
-Verify that the ONTAP namespaces correctly reflect on the host:
+You need to verify that the ONTAP namespaces correctly reflect on the host. Run the following command to do so:
 ----
 # [root@aix_server /]: lsdev -Cc disk |grep NVMe
 ----
@@ -269,6 +269,7 @@ hdisk1  Available 00-00-02 NVMe 4K Disk
 ----
 
 == Known issues 
+NVMe/FC host configuration for AIX with ONTAP has the following known issues:
 
 [cols="10,30,30",options="header"]
 |===
