--- a/nvme_aix.adoc
+++ b/nvme_aix.adoc
@@ -19,24 +19,24 @@ You can enable NVMe/FC on IBM AIX and VIOS/PowerVM hosts using ONTAP storage as 
 
 The following support is available for NVMe/FC host configuration for an AIX host with ONTAP:
 
-* Beginning with ONTAP 9.13.1, NVMe over Fibre Channel (NVMe/FC) support is added for IBM AIX 7.2 TL5 SP6, AIX 7.3 TL1 SP2 and VIOS 3.1.4.2 releases with SAN boot support for both physical and virtual stacks. See the IBM documentation for more information on setting up SAN boot support.
+* Beginning with ONTAP 9.13.1, NVMe over Fibre Channel (NVMe/FC) support is added for IBM AIX 7.2 TL5 SP6, AIX 7.3 TL1 SP2 and VIOS 3.1.4.21 releases with SAN boot support for both physical and virtual stacks. See the IBM documentation for more information on setting up SAN boot support.
 
 * NVMe/FC is supported only with Power9 and Power10 IBM servers.
 
 * No separate PCM (Path Control Module), such as HUK for AIX SCSI MPIO support, is required for the NVMe devices.
 
-* Virtualization support with NetApp (VIOS/PowerVM) is introduced with VIOS 3.1.4.21. This is supported through NPIV (N_PortID Virtualization) storage virtualization mode only using the Power10 IBM server.
+* Virtualization support with NetApp (VIOS/PowerVM) is introduced with VIOS 3.1.4.21. This is _only_ supported through NPIV (N_PortID Virtualization) storage virtualization mode using the Power10 IBM server.
 
 
 .What you'll need
 
-* Verify that you have 32GB FC Emulex adapters (EN1A, EN1B, EN1L, EN1M) and 64GB FC adapters (EN1N, EN1P) with adapter firmware 12.4.257.30 (FCode level 12.8.9).
+* Verify that you have 32GB FC Emulex adapters (EN1A, EN1B, EN1L, EN1M) and 64GB FC adapters (EN1N, EN1P) with adapter firmware 12.4.257.30 and later versions.
 
-* Set the ANATT (Asymmetric Namespace Access Transition Timeout) to 60 seconds or above to ensure that all the ONTAP workflows are nondisruptive. By default, the ANATT for the AIX host OS is 30 second.
+* Set the ANATT (Asymmetric Namespace Access Transition Timeout) to 60 seconds or above to ensure that all the ONTAP workflows are non-disruptive. By default, the ANATT for the AIX host OS is at least 60s.
 
-* If you have a MetroCluster configuration, NetApp recommends changing AIX NVMe/FC default APD (All Path Down) time for supporting MetroCluster Unplanned Switchover events to avoid the AIX operating system enforcing a shorter I/O timeout. For additional information and the recommended changes to default settings, refer to link:[Public Report 1553249].
+* If you have a MetroCluster configuration, NetApp recommends changing AIX NVMe/FC default APD (All Path Down) time for supporting MetroCluster Unplanned Switchover events to avoid the AIX operating system enforcing a shorter I/O timeout. For additional information and the recommended changes to default settings, refer to the public report 1553249.
 
-* IBM provides an Interim Fix (iFix) which caps the ANATT values at 60 seconds. For NVMe/FC AIX support, you must download and install the ifix from the IBM website on the GA versions of AIX OS. This is not required for the VIOS/PowerVM OS.
+* IBM provides an Interim Fix (iFix) which caps the ANATT value at 60 seconds. For NVMe/FC AIX support, you must download and install the iFix from the IBM website on the GA versions of AIX OS. This is not required for the VIOS/PowerVM OS.
 
 +
 
@@ -80,7 +80,7 @@ NVMe/FC host configuration for AIX with ONTAP has the following known limitation
 
 == Multipathing
 
-IBM MPIO (Multi Path I/O), used for NVMe multipathing, is provided by default when you install the OS .  
+IBM MPIO (Multi Path I/O), used for NVMe multipathing, is provided by default when you install the AIX OS .  
 
 You can verify that NVMe multipathing is enabled for an AIX host by using the `lsmpio` command:
 
@@ -131,7 +131,7 @@ Flags:0x81<NOT_MAPPED,NOT_CONNECTED>
 VFC client name:                VFC client DRC:
 ----
 
-. Enable support for the NVME-oF protocol on an adapter by running the ioscli vfcctrl command on the VIOS:
+. Enable support for the NVMe/FC protocol on an adapter by running the `ioscli vfcctrl` command on the VIOS:
 +
 ----
 $  vfcctrl -enable -protocol nvme -vadapter vfchost0
@@ -157,8 +157,8 @@ num_per_nvme  0     Number of NPIV NVME queues per range     True
 num_per_range 0     Number of NPIV SCSI queues per range     True
 ----
 
-. Enable NVMeoF protocol for all current adapters or selected adapters:
-.. Enable the NVMeoF protocol for all adapters:
+. Enable NVMe/Fc protocol for all current adapters or selected adapters:
+.. Enable the NVMe/Fc protocol for all adapters:
 ... Change the `dflt_enabl_nvme` attribute value of `viosnpiv0` pseudo device to `yes`.
 ... Set the `enable_nvme` attribute value to `yes` for all the VFC host devices.
 +
@@ -181,7 +181,7 @@ num_per_range   8   NPIV Number of SCSI queues per range                 True
 secure_va_info  no  NPIV Secure Virtual Adapter Information              True
 ----
 
-.. Enable the NVMeoF protocol for selected adapters by changing the enable_nvme value of VFC host device attribute to yes.
+.. Enable the NVMe/Fc protocol for selected adapters by changing the `enable_nvme value` of VFC host device attribute to `yes`.
 
 . Verify that `FC-NVMe Protocol Device` has been created on the server:
 +
@@ -196,7 +196,7 @@ fcnvme0       Available 00-00-02    FC-NVMe Protocol Device
 fcnvme1       Available 00-01-02    FC-NVMe Protocol Device
 ----
 
-. Record the Host NQN from the server:
+. Record the host NQN from the server:
 +
 ----
 # [root@aix_server /]: lsattr -El fcnvme0
@@ -276,16 +276,10 @@ NVMe/FC host configuration for AIX with ONTAP has the following known issues:
 |Burt ID |Title |Description
 
 |1536439 |AIX NVMe/FC rescan results in redundant controllers during LIF toggles |
-|1553249 |AIX NVMe/FC default APD time to be modified for supporting MCC Unplanned Switchover events	| By default, AIX operating systems use an all path down (APD) timeout value of
-20 seconds for NVMe/FC.  However, ONTAP MetroCluster automatic unplanned switchover 
-(AUSO) and TieBreaker initiated switchover workflows might take a little longer than
-the APD timeout window, causing I/O errors.
-|1546017 |AIX NVMe/FC caps ANATT at 60s, instead of 120s as advertised by ONTAP | ONTAP advertises the ANA(asymmetric namespace access) transition timeout in 
-controller identify at 120sec. Currently, with ifix, AIX reads the ANA transition 
-timeout from controller identify, but effectively clamps it to 60sec if it is over 
-that limit.	
-|1541386 |AIX NVMe/FC hits EIO after ANATT expiry	|
-|1541380 |AIX NVMe/FC waits for half/full ANATT to expire before resuming I/O after ANA AEN | IBM AIX NVMe/FC does not support some Asynchronous notifications (AENs) that ONTAP publishes. This Sub-optimal ANA handling will result in sub optimal performance during SFO operations.
+|1553249 |AIX NVMe/FC default APD time to be modified for supporting MCC Unplanned Switchover events	| By default, AIX operating systems use an all path down (APD) timeout value of 20 seconds for NVMe/FC.  However, ONTAP MetroCluster automatic unplanned switchover (AUSO) and TieBreaker initiated switchover workflows might take a little longer than the APD timeout window, causing I/O errors.
+|1546017 |AIX NVMe/FC caps ANATT at 60s, instead of 120s as advertised by ONTAP | ONTAP advertises the ANA(asymmetric namespace access) transition timeout in controller identify at 120sec. Currently, with ifix, AIX reads the ANA transition timeout from controller identify, but effectively clamps it to 60sec if it is over that limit.	
+|1541386 |AIX NVMe/FC hits EIO after ANATT expiry	|For any storage failover (SFO) events, if the ANA(asymmetric namespace access) transitioning exceeds the ANA transition timeout cap on a given path, the AIX NVMe/FC host fails with an I/O error despite having alternate healthy  paths available to the namespace.
+|1541380 |AIX NVMe/FC waits for half/full ANATT to expire before resuming I/O after ANA AEN | IBM AIX NVMe/FC does not support some Asynchronous notifications (AENs) that ONTAP publishes. This sub-optimal ANA handling will result in sub optimal performance during SFO operations.
 |===
 
 
