--- a/nvme_aix.adoc
+++ b/nvme_aix.adoc
@@ -30,13 +30,15 @@ The following support is available for NVMe/FC host configuration for an AIX hos
 
 .What you'll need
 
-* Verify that you have 32GB FC Emulex adapters (EN1A, EN1B, EN1L, EN1M) and 64GB FC adapters (EN1N, EN1P) with adapter firmware 12.4.257.30 and later versions.
-
-* Set the ANATT (Asymmetric Namespace Access Transition Timeout) to 60 seconds or above to ensure that all the ONTAP workflows are non-disruptive. By default, the ANATT for an AIX host OS is 30s.
+* Verify that you have 32GB FC Emulex adapters (EN1A, EN1B, EN1L, EN1M) or 64GB FC adapters (EN1N, EN1P) with adapter firmware 12.4.257.30 and later versions.
 
 * If you have a MetroCluster configuration, NetApp recommends changing AIX NVMe/FC default APD (All Path Down) time for supporting MetroCluster Unplanned Switchover events to avoid the AIX operating system enforcing a shorter I/O timeout. For additional information and the recommended changes to default settings, refer to the public report 1553249.
 
-* IBM provides an interim iix (ifix) which caps the ANATT value at 60 seconds. For NVMe/FC AIX support, you must download and install the ifix from the IBM website on the GA versions of AIX OS. This is not required for the VIOS/PowerVM OS.
+* By default, the ANATT value for the AIX host OS is 30 seconds. IBM provides an Interim Fix (ifix) which caps the ANATT value at 60 seconds; you need to install an ifix from the IBM website to ensure that all the ONTAP workflows are non-disruptive.. 
++
+
+[NOTE]
+For NVMe/FC AIX support, you need install an ifix on the GA versions of AIX OS. This is not required for the VIOS/PowerVM OS.
 
 +
 
@@ -53,7 +55,7 @@ You need to install the ifixes on an AIX version with no previously installed if
 +
 The following table demonstrates HBAs assigned to the AIX LPAR (AIX Logical Partition) or the physical/native stack in a non-virtualized mode:
 +
-[cols="10,30,30,10,10",options="header"]
+[cols="10,10,10,10,10",options="header"]
 |===
 
 |Host OS |Power Arch |Power FW version |Mode |Comments
@@ -65,7 +67,7 @@ The following table demonstrates HBAs assigned to the AIX LPAR (AIX Logical Part
 +
 The following table demonstrates HBAs assigned to the VIOS with NPIV-enabled support in a virtualized mode:
 +
-[cols="10,30,30,10,10",options="header"]
+[cols="10,10,10,10,10",options="header"]
 |===
 |Host OS	|Power Arch	|Power FW version	|Mode	|Comments
 |VIOS/PowerVM 3.1.4.21	|Power10	|FW 1010 or later	|Virtual stack	|Support starts from AIX 7.3 TL1 SP2 for VIOCc 
@@ -91,9 +93,9 @@ You can verify that NVMe multipathing is enabled for an AIX host by using the `l
 ----
 name     path_id  status   path_status  parent  connection
 hdisk1  8         Enabled  Sel,Opt       nvme12  fcnvme0, 9
-hdisk1  9         Enabled  Sel,Non      nvme65  fcnvme1, 9
-hdisk1  10       Enabled  Sel,Opt       nvme37  fcnvme1, 9
-hdisk1  11        Enabled  Sel,Non      nvme60  fcnvme0, 9
+hdisk1  9         Enabled  Sel,Non       nvme65  fcnvme1, 9
+hdisk1  10        Enabled  Sel,Opt       nvme37  fcnvme1, 9
+hdisk1  11        Enabled  Sel,Non       nvme60  fcnvme0, 9
 ----
 
 == Configure NVMe/FC
@@ -264,13 +266,20 @@ You need to verify that the ONTAP namespaces correctly reflect on the host. Run 
 *Example output*
 ----
 hdisk1  Available 00-00-02 NVMe 4K Disk
+----
 
-      #[root@aix_server /]: lsmpio -l hdisk1
-      name     path_id  status   path_status  parent  connection
-      hdisk1  8        Enabled  Sel,Opt      nvme12  fcnvme0, 9
-      hdisk1  9        Enabled  Sel,Non      nvme65  fcnvme1, 9
-      hdisk1  10       Enabled  Sel,Opt      nvme37  fcnvme1, 9
-      hdisk1  11       Enabled  Sel,Non      nvme60  fcnvme0, 9
+You can check the multipathing status:
+
+----
+#[root@aix_server /]: lsmpio -l hdisk1
+----
+*Example output*
+----
+name     path_id  status   path_status  parent  connection
+hdisk1  8        Enabled  Sel,Opt      nvme12  fcnvme0, 9
+hdisk1  9        Enabled  Sel,Non      nvme65  fcnvme1, 9
+hdisk1  10       Enabled  Sel,Opt      nvme37  fcnvme1, 9
+hdisk1  11       Enabled  Sel,Non      nvme60  fcnvme0, 9
 ----
 
 == Known issues 
